Fixes case study misfire and also hides overflow text on index.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,4 +13,5 @@
 figcaption < p {
   margin: 0 auto;
   text-align: center;
+  overflow: hidden;
 }
